--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "bootstrap": "^5.3.3",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0",
+        "vue-toast-notification": "^3.1.3",
         "vuex": "^4.1.0"
     }
 }
