--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite --host"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
@@ -17,6 +17,8 @@
         "@vitejs/plugin-vue": "^5.2.1",
         "ant-design-vue": "^4.2.6",
         "bootstrap": "^5.3.3",
+        "laravel-echo": "^2.0.2",
+        "pusher-js": "^8.4.0",
         "vue": "^3.5.13",
         "vue-router": "^4.5.0",
         "vue-toast-notification": "^3.1.3",
