--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@vitejs/plugin-vue": "^5.2.1",
         "ant-design-vue": "^4.2.6",
         "bootstrap": "^5.3.3",
+        "dayjs": "^1.11.13",
         "laravel-echo": "^2.0.2",
         "pusher-js": "^8.4.0",
         "vue": "^3.5.13",
